tests/snapshots/execution_spec__caching-gql-args.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  id: Int!
}

input Dummy {
  list: [Int]
}

scalar Email

type Query {
  bar(dummy: Dummy, flag: Boolean!, id: Int!): Bar
}

schema {
  query: Query
}
