tests/snapshots/execution_spec__caching-gql-parent-not-null.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "foo": {
            "id": 1
          },
          "id": 1
        },
        {
          "foo": {
            "id": 2
          },
          "id": 2
        },
        {
          "foo": {
            "id": 3
          },
          "id": 3
        },
        {
          "foo": {
            "id": 4
          },
          "id": 4
        }
      ]
    }
  }
}
