tests/snapshots/execution_spec__caching-gql-parent-not-null.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  foo: Foo
  id: Int!
}

type Foo {
  id: Int
}

type Query {
  bars: [Bar]
}

schema {
  query: Query
}
