tests/snapshots/execution_spec__caching-gql-parent-not-null.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1,headers: [],maxSize: 1000}) {
  query: Query
}

type Bar {
  foo: Foo @http(path: "/foo?id={{value.id}}") @cache(maxAge: 300)
  id: Int!
}

type Foo {
  id: Int
}

type Query {
  bars: [Bar] @http(path: "/bars")
}
