tests/snapshots/execution_spec__caching-gql-parent-null.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "id": 1
        },
        {
          "id": 3
        },
        {
          "id": 5
        },
        {
          "id": 7
        }
      ]
    }
  }
}