tests/snapshots/execution_spec__caching-gql-parent-null.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  id: Int!
}

type Query {
  bars: [Bar]
}

schema {
  query: Query
}
