tests/snapshots/execution_spec__caching-gql-parent-obj.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "flag": true,
          "foo": {
            "id": 2
          },
          "id": [
            {
              "bid": 1
            }
          ]
        },
        {
          "flag": false,
          "foo": {
            "id": 4
          },
          "id": [
            {
              "bid": 3
            }
          ]
        },
        {
          "flag": false,
          "foo": {
            "id": 6
          },
          "id": [
            {
              "bid": 5
            }
          ]
        },
        {
          "flag": true,
          "foo": {
            "id": 8
          },
          "id": [
            {
              "bid": 7
            }
          ]
        }
      ]
    }
  }
}
