tests/snapshots/execution_spec__caching-gql-parent-obj.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1,headers: [],maxSize: 1000}) {
  query: Query
}

type Bar {
  flag: Boolean
  foo: Foo
  id: [BarId]
}

type BarId {
  bid: Int
}

type Foo {
  id: Int
}

type Query @cache(maxAge: 100) {
  bars: [Bar] @http(path: "/bars")
}
