tests/snapshots/execution_spec__caching.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "id": 1,
          "foo": {
            "id": 2
          }
        },
        {
          "id": 3,
          "foo": {
            "id": 4
          }
        },
        {
          "id": 5,
          "foo": {
            "id": 6
          }
        },
        {
          "id": 7,
          "foo": {
            "id": 8
          }
        }
      ]
    }
  }
}
