tests/snapshots/execution_spec__caching.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "fieldCache": {
        "id": 1
      },
      "fieldCacheList": [
        {
          "id": 1
        },
        {
          "id": 2
        },
        {
          "id": 3
        }
      ],
      "typeCache": {
        "a": {
          "id": 11
        },
        "b": {
          "id": 21
        },
        "list": [
          {
            "id": 31
          },
          {
            "id": 32
          },
          {
            "id": 33
          }
        ]
      }
    }
  }
}
