tests/snapshots/execution_spec__caching.md_assert_metrics_0.snap
---
source: tests/execution_spec.rs
expression: opentelemetry.get_metrics().await.unwrap()
---
[
  [
    {
      "name": "cache",
      "entries": [
        {
          "name": "cache.hit_rate"
        }
      ]
    },
    {
      "name": "http_request",
      "entries": [
        {
          "name": "request.count"
        }
      ]
    },
    {
      "name": "process-resources",
      "entries": [
        {
          "name": "process.cpu.usage"
        },
        {
          "name": "process.cpu.utilization"
        },
        {
          "name": "process.memory.usage"
        },
        {
          "name": "process.memory.virtual"
        },
        {
          "name": "process.disk.io"
        }
      ]
    }
  ]
]
