tests/snapshots/execution_spec__caching.md_assert_traces_0.snap
---
source: tests/execution_spec.rs
expression: opentelemetry.get_traces().unwrap()
---
[
  {
    "name": "eval"
  },
  {
    "name": "eval"
  },
  {
    "name": "field::resolver"
  },
  {
    "name": "handle_request"
  }
]
